DSS-PEPPER-530-added-OSINST-logo-fix-align-center

--- a/ddp-workspace/projects/ddp-osteo/src/app/components/welcome/welcome.component.scss
+++ b/ddp-workspace/projects/ddp-osteo/src/app/components/welcome/welcome.component.scss
@@ -185,6 +185,10 @@
     height: 110px;
 }
 
+.social-media-logos__img.alignCenter {
+    text-align: center;
+}
+
 .social-media-logo {
     display: flex;
 }
